// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`levelset > constructor > levels 1`] = `
{
  "levels": [
    {
      "cells": [
        "     ",
        "     ",
        "     ",
      ],
      "demo": null,
      "height": 3,
      "infotronsNeed": 0,
      "initialFreezeZonks": false,
      "initialGravity": false,
      "maxTitleLength": 23,
      "signature": null,
      "specialPorts": [],
      "title": "                       ",
      "width": 5,
    },
    {
      "cells": [
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
      ],
      "demo": null,
      "height": 9,
      "infotronsNeed": 0,
      "initialFreezeZonks": false,
      "initialGravity": false,
      "maxTitleLength": 23,
      "signature": null,
      "specialPorts": [],
      "title": "                       ",
      "width": 7,
    },
  ],
  "levelsCount": 2,
}
`;

exports[`levelset > constructor > none 1`] = `
{
  "levels": [
    {
      "cells": [
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
      ],
      "demo": null,
      "height": 24,
      "infotronsNeed": 0,
      "initialFreezeZonks": false,
      "initialGravity": false,
      "maxTitleLength": 23,
      "signature": null,
      "specialPorts": [],
      "title": "                       ",
      "width": 60,
    },
  ],
  "levelsCount": 1,
}
`;
